syntax = "proto3";
package counter_api;
option go_package = "grpc/counter;counter_api";

// protoc --proto_path=grpc/counter --go_out=:.  --go-grpc_out=:. grpc/counter/counter.proto

service CounterService {
  rpc  NewMessage(CounterEventRequest) returns (CounterEventResponse) {}
  rpc MessageRead(CounterEventRequest) returns (CounterEventResponse) {}
  rpc  CompensateNewMessage(CounterEventRequest) returns (CounterEventResponse) {}
  rpc CompensateMessageRead(CounterEventRequest) returns (CounterEventResponse) {}
}

// MVP
message CounterEventRequest {
  int64 user_id = 1;
  int64 message_id = 2;
  int64 chat_id = 3;
}

message CounterEventResponse {

}